# RNode_THalow_Firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
inc/: ble.h  button.h  kiss.h  rns_framing.h  slip.h  status_led.h  system.h
inc/config/: project_config.h
libs/: .gitkeep
main/: CMakeLists.txt  rnode_halow.c  rnode_halow.h  rnode_halow_main.c
src/: CMakeLists.txt  ble.c  button.c  kiss.c  main.c  rns_framing.c  slip.c  status_led.c  system.c
tools/: ble_test.py
utils/: make_release.py
